--- a/tutorial/html/task/index.html
+++ b/tutorial/html/task/index.html
@@ -405,7 +405,7 @@ costsens.task
 <p>Beygelzimer, A., Dani, V., Hayes, T., Langford, J., and Zadrozny, B.
 Error limiting reductions between classification tasks.
 In Machine Learning: Proceedings of the 22rd International Conference, pp. 49–56. ACM, 2005.</p>
-<p>For more details see the section about <a href="FIXME">cost-sensitive classification FIXME</a>.</p>
+<p>For more details see the section about <a href="../cost_sensitive_classif/">cost-sensitive classification</a>.</p>
 <h3 id="further-details">Further details</h3>
 <p>The <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a> help page also lists several other arguments to describe further details of the
 problem.</p>
