--- a/tutorial/html/measures/index.html
+++ b/tutorial/html/measures/index.html
@@ -243,7 +243,7 @@
 
 <h1 id="implemented-performance-measures">Implemented Performance Measures</h1>
 <p>The following tables show the performance measures available for the different types of
-learning problems in alphabetical order.</p>
+learning problems as well as general performance measures in alphabetical order.</p>
 <p>Column <strong>Minimize</strong> indicates if the measure is minimized during, e.g., tuning or
 feature selection.
 <strong>Best</strong> and <strong>Worst</strong> show the best and worst values the performance measure can attain.</p>
@@ -284,7 +284,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left">acc</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">acc</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -296,7 +296,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">auc</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">auc</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -308,7 +308,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">bac</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">bac</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -320,7 +320,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">ber</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">ber</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -332,7 +332,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">f1</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">f1</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -344,7 +344,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">fdr</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fdr</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -356,7 +356,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">fn</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fn</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -368,7 +368,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">fnr</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fnr</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -380,7 +380,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">fp</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fp</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -392,7 +392,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">fpr</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fpr</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -404,7 +404,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">gmean</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">gmean</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -416,7 +416,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">gpr</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">gpr</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -428,7 +428,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">mcc</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mcc</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">-1</td>
@@ -440,7 +440,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">mmce</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mmce</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -452,7 +452,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">multiclass.auc</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">multiclass.auc</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -464,7 +464,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">npv</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">npv</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -476,7 +476,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">ppv</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">ppv</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -488,7 +488,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">tn</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tn</a></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -500,7 +500,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">tnr</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tnr</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -512,7 +512,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">tp</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tp</a></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -524,7 +524,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">tpr</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tpr</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -554,7 +554,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left">mae</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mae</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -565,7 +565,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">medae</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">medae</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -576,7 +576,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">medse</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">medse</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -587,7 +587,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">mse</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mse</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -598,7 +598,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">rmse</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">rmse</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -609,7 +609,7 @@ vertical-align: top;
 <td align="left">test.sqrt.of.mean</td>
 </tr>
 <tr>
-<td align="left">sae</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">sae</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -620,7 +620,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">sse</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">sse</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -649,7 +649,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left">cindex</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">cindex</a></td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -678,7 +678,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left">db</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">db</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -689,7 +689,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">dunn</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">dunn</a></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -700,7 +700,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">G1</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">G1</a></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -711,7 +711,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">G2</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">G2</a></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -722,7 +722,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">silhouette</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">silhouette</a></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -751,7 +751,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left">mcp</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mcp</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -762,7 +762,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">meancosts</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">meancosts</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -791,7 +791,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left">featperc</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">featperc</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -802,7 +802,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">timeboth</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timeboth</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -813,7 +813,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">timepredict</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timepredict</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -824,7 +824,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left">timetrain</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timetrain</a></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
